# lany/week10/swagger/mission.swagger.yaml
@@ -99,3 +99,91 @@ paths:
                   message:
                     type: string
                     example: 서버 에러, 관리자에게 문의 바랍니다.
+  /mission/ongoing:
+    get:
+      tags:
+        - mission
+      summary: 진행중인 미션 조회
+      description: 진행중인 미션을 조회합니다.
+      operationId: checkOngoingMission
+      parameters:
+        - name: page
+          in: query
+          required: true
+          schema:
+            type: integer
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: 진행중인 미션 조회 성공!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+                  result:
+                    type: object
+                    example:
+                      [
+                        {
+                          mission_id: 2,
+                          title: "곱도리탕 먹고 인증하기",
+                          description: "매운집의 인기메뉴인 곱토리탕을 먹고 인증하세요!",
+                          status: "진행중",
+                          created_at: 2024-06-05T08:04:44.000Z,
+                        },
+                      ]
+        "400":
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: 잘못된 요청입니다
+        "500":
+          description: 서버 에러
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON000
+                  message:
+                    type: string
+                    example: 서버 에러, 관리자에게 문의 바랍니다.
